bugfix on methods getFirst and getLast not found by CI